--- a/BeezNest/Views/Shared/_Layout.cshtml
+++ b/BeezNest/Views/Shared/_Layout.cshtml
@@ -43,8 +43,6 @@
             left: -5px;
         }
 
-       
-
         #checkoutContainer {
             background-color: #0196E7 !important;
         }
@@ -74,7 +72,6 @@
                 .dropdown-menu .dropdown-item i {
                     font-size: 16px;
                 }
-
 
     </style>
 
@@ -177,7 +174,6 @@
         }
     </script>
 
-
 </head>
 <body>
     <header>
@@ -264,6 +260,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
             </form>
+            </div>
         </nav>
     </header>
 
@@ -500,5 +497,19 @@
     @await RenderSectionAsync("Scripts", required: false)
     @RenderSection("script", required: false)
 
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/67a23358825083258e0ff345/1ij8ph548';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+  
 </body>
 </html>
